<resources>
    <string name="app_name">SLEEP LOG</string>
    <string name="default_text">Add your first sleep</string>
    <string name="duration">Duration</string>
    <string name="duration_time">%d.%d H</string>
    <string name="empty_duration">0H</string>
    <string name="quality">Quality</string>
    <string name="fab_text">Add Sleep</string>
    <string name="minutes">Min</string>
    <string name="hours">H</string>
    <string name="chip_poor">Poor</string>
    <string name="chip_fair">Fair</string>
    <string name="chip_average">Average</string>
    <string name="chip_good">Good</string>
    <string name="chip_very_good">Very Good</string>
    <string name="dialog_title_add">ADD YOUR SLEEP</string>
    <string name="dialog_title_update">UPDATE YOUR SLEEP</string>
    <string name="date">Date</string>
    <string name="edit">Edit</string>
    <string name="average_sleep">AVERAGE SLEEP</string>
    <string name="last_record">LAST RECORD</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="select_sleep_quality">Select Sleep Quality</string>
</resources>